# veloserve

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  veloserve.toml  vercel.json  wordpress-sapi.toml  wordpress.toml
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml  release.yml
cpanel/: README.md  import-apache-and-swap.sh  install-whm-plugin.sh  uninstall-whm-plugin.sh
cpanel/hooks/: install-hooks.sh  veloserve-hook.sh
cpanel/tests/: wordpress-helper-fixture.sh
cpanel/whm/: veloserve.cgi
cpanel/whm/assets/: veloserve.css  veloserve.js
cpanel/wordpress/: README.md  veloserve-wordpress-helper.sh
docs/: PHP_EXTENSIONS.md  README.md  cli.md  configuration.md  environment-variables.md  php.md  wordpress-plugin.md
docs-site/: mkdocs.yml  vercel.json
docs-site/docs/: index.md  troubleshooting.md
docs-site/docs/configuration/: cache.md  logging.md  php.md  reference.md  security.md  ssl-tls.md  virtual-hosts.md
docs-site/docs/cpanel/: apache-swap.md  cli-commands.md  hooks.md  installation.md  overview.md  ssl-autossl.md  tailwatchd.md  whm-plugin.md
docs-site/docs/getting-started/: installation.md  quick-start.md
docs-site/docs/guides/: magento-cache-invalidation.md  magento2.md  performance.md  wordpress-plugin.md  wordpress.md
examples/: veloserve.toml
examples/www/: index.html  index.php  info.php
src/: lib.rs  main.rs
src/apache_compat/: converter.rs  errors.rs  mod.rs  parser.rs
src/cache/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/php/: ffi.rs  mod.rs  sapi.rs
src/php_worker/: main.rs  pool.rs  protocol.rs  server.rs  worker.rs
src/server/: cache_warmer.rs  handler.rs  mod.rs  router.rs  static_files.rs  tls.rs
src/velopanel/: mod.rs
tests/: cache_invalidation.rs  http_methods.rs
website/: index.html  install.sh  pricing.html  style.css  theme.js  vercel.json
wordpress-plugin/: README.md
wordpress-plugin/tests/: plugin-flows-test.php  run-tests.sh
wordpress-plugin/veloserve-cache/: uninstall.php  veloserve-cache.php
(+18 files in other folders)
