[package]
name = "veloserve"
version = "1.0.0"
edition = "2021"
authors = ["VeloServe Team"]
description = "High-performance web server with integrated PHP support"
license = "MIT"
repository = "https://github.com/veloserve/veloserve"
keywords = ["web-server", "http", "php", "cache", "performance"]
categories = ["web-programming::http-server", "caching"]

[features]
default = []
# Enable embedded PHP SAPI (requires libphp-embed)
# Build with: cargo build --features php-embed
php-embed = []

[build-dependencies]
bindgen = "0.69"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# HTTP/2 support
h2 = "0.4"

# TLS support
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"

# Configuration
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
bytes = "1.5"
futures = "0.3"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
mime_guess = "2.0"
percent-encoding = "2.3"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
socket2 = "0.5"
once_cell = "1.19"

# Inter-process communication
bincode = "1.3"

# PHP process management (Unix only)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal"] }

[dependencies.tempfile]
version = "3.9"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
# reqwest = { version = "0.11", features = ["json"] }  # Requires OpenSSL

[[bin]]
name = "veloserve"
path = "src/main.rs"

[[bin]]
name = "veloserve-php"
path = "src/php_worker/main.rs"

# [[bench]]
# name = "server_bench"
# harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

